# specmake

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  commitlint.yml  pyproject.toml
.github/workflows/: pr-comment.yml  publish-pypi.yml  publish-testpypi.yml  python-package-freebsd.yml  python-package.yml
spec-types/spec/: pkg-action-copy-and-substitute.yml  pkg-action-create-ini-file.yml  pkg-action-create-kconfig-file.yml  pkg-action-directory-state-add-files.yml  pkg-action-directory-state-add-tarfile-members.yml  pkg-action-directory-state-add-tree.yml  pkg-action-directory-state-clear.yml  pkg-action-directory-state-copy-file.yml  pkg-action-directory-state-copy-tree.yml  pkg-action-directory-state-move-tree.yml  pkg-action-enabled-by-list.yml  pkg-action-enabled-by.yml  pkg-action-for-each.yml  pkg-action-list.yml  pkg-action-mkdir.yml  pkg-action-remove-empty-directories.yml  pkg-action-remove-glob.yml  pkg-action-remove-tree.yml  pkg-action-remove.yml  pkg-action-subprocess-arg-list.yml  pkg-action-subprocess-arg.yml  pkg-action-subprocess-env-list.yml  pkg-action-subprocess-env.yml  pkg-action-subprocess.yml  pkg-action-touch.yml  pkg-action.yml  pkg-archive.yml  pkg-attribute-action-enabled-by-list.yml  pkg-attribute-action-enabled-by.yml  pkg-attribute-action-generic.yml  pkg-attribute-action-insert.yml  pkg-attribute-action-list.yml  pkg-attribute-action-remove-list-items.yml  pkg-attribute-action-remove.yml  pkg-attribute-action-substitute.yml  pkg-attribute-action.yml  pkg-benchmark-variant-role.yml  pkg-build-config.yml  pkg-build-paf-spamr.yml  pkg-build-performance-images.yml  (+149 more)
src/specmake/: __init__.py  archiver.py  cliaddpatches.py  clibuild.py  clidecimate.py  clifromsource.py  cligcovr.py  climake.py  clisubstitute.py  cliupdateperf.py  cliupdatetimeouts.py  cliverify.py  codecoverage.py  directorystate.py  dirstatebase.py  docbuilder.py  doxyfile.py  gcdaproducer.py  icdbuilder.py  itemcachestate.py  linkhub.py  membench.py  membenchcollector.py  packagechanges.py  rtems.py  (+31 more)
tests/: Doxyfile  hello.py  some.elf  spec.pickle  specware.yml  test_archiver.py  test_build_order.py  test_clifromsource.py  test_cligcovr.py  test_directorystate.py  test_doxyfile.py  test_gcdaproducer.py  test_icdbuilder.py  test_linkhub.py  test_membench.py  test_membenchcollector.py  test_packagebuild.py  test_packagemanual.py  test_perfimages.py  test_reposubset.py  test_rtems.py  test_rtemstestsimages.py  test_runactions.py  test_runexecutablecmd.py  test_sddlinker.py  test_sourcecompare.py  test_sourcetospec.py  test_speccompare.py  test_sphinxbuilder.py  test_sreldbuilder.py  test_srsbuilder.py  test_stdtailoring.py  test_svrbuilder.py  test_testaggregator.py  test_testoutputparser.py  test_testplan.py  test_testreporter.py  test_testrunner.py  test_testrunneresa.py  test_testrunnergrpc.py  (+3 more)
(+439 files in other folders)
