# SPDX-License-Identifier: BSD-2-Clause

# Copyright (C) 2026 embedded brains GmbH & Co. KG

[project]
name = "specmake"
version = "1.1.8.dev1"
description = "Provides utilities to build packages."
authors = [
    {name = "The specmake Authors", email = "specthings@embedded-brains.de"}
]
license = "BSD-2-Clause"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gcovr >=8.6",
    "matplotlib >=3.10.1",
    "specitems >=1.1.5",
    "specware >=1.1.3",
    "sphinx >=8.2.3",
    "sphinx-better-subsection >=0.2",
    "sphinx-rtd-theme >=3.0.2",
    "sphinxcontrib-applehelp >=2.0.0",
    "sphinxcontrib-bibtex >=2.6.3",
    "sphinxcontrib-devhelp >=2.0.0",
    "sphinxcontrib-htmlhelp >=2.1.0",
    "sphinxcontrib-jquery >=4.1",
    "sphinxcontrib-jsmath >=1.0.1",
    "sphinxcontrib-qthelp >=2.0.0",
    "sphinxcontrib-serializinghtml >=2.0.0",
    "yapf >=0.43.0",
]
keywords = [
  "certification",
  "documentation",
  "markdown",
  "qualification",
  "requirements-management",
  "traceability",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

[project.urls]
"Source Code" = "https://github.com/specthings/specmake"
"Bug Tracker" = "https://github.com/specthings/specmake/issues"

[project.scripts]
specbuild = "specmake.clibuild:clibuild"
specfromsource = "specmake.clifromsource:clifromsource"
specgcovr = "specmake.cligcovr:cligcovr"
specmake = "specmake.climake:climake"
specupdateperf = "specmake.cliupdateperf:cliupdateperf"
specupdatetimeouts = "specmake.cliupdatetimeouts:cliupdatetimeouts"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "sphinx-autodoc-napoleon-typehints>=2.1.6",
    "sphinx-autodoc-typehints>=3.6.1",
    "sphinx-rtd-theme>=3.1.0",
    "types-pyyaml>=6.0.12.20250915",
    "yapf>=0.43.0",
]

[tool.pytest.ini_options]
addopts = "--cov=specmake --cov-fail-under=90 --cov-branch --cov-report=term-missing --cov-config=.coveragerc"
